[gd_scene load_steps=19 format=3 uid="uid://bvupkyofykd7q"]

[ext_resource type="Theme" uid="uid://c1vds42xiuak4" path="res://assets/interactables/buttons.tres" id="1_dhpfl"]
[ext_resource type="Script" path="res://scenes/summon_scene.gd" id="1_yxd1t"]
[ext_resource type="Texture2D" uid="uid://ck5m7hkwawwmk" path="res://assets/backgrounds/SummonScreen.png" id="2_ra40d"]
[ext_resource type="Texture2D" uid="uid://x6vrdemky7j7" path="res://assets/character_images/FeralHogs.png" id="4_ecdn6"]
[ext_resource type="Texture2D" uid="uid://x0ukntab74md" path="res://assets/overlays/COverlay.png" id="4_g2wec"]
[ext_resource type="Texture2D" uid="uid://c7la8pcnk1mia" path="res://assets/overlays/ROverlay.png" id="5_qco1a"]
[ext_resource type="Texture2D" uid="uid://ea264ullhfo5" path="res://assets/character_images/Guy.png" id="5_rkjw8"]
[ext_resource type="Texture2D" uid="uid://bi23461yfd5oc" path="res://assets/character_images/BadGuy.png" id="6_7iab1"]
[ext_resource type="Texture2D" uid="uid://csw1d5dpb21pi" path="res://assets/overlays/SROverlay.png" id="6_tarvw"]
[ext_resource type="Texture2D" uid="uid://owga2c3fmglu" path="res://assets/character_images/UchihaAkira.png" id="7_35sen"]
[ext_resource type="Texture2D" uid="uid://bgh26kdjmuwug" path="res://assets/overlays/UROverlay.png" id="8_ed6ho"]
[ext_resource type="Texture2D" uid="uid://dp3k2fhxf3r0d" path="res://assets/character_images/UchihaItami.png" id="8_joer5"]
[ext_resource type="Texture2D" uid="uid://wuwitignjtml" path="res://assets/backgrounds/MenuRank.png" id="9_rtcew"]
[ext_resource type="Texture2D" uid="uid://dyiii4y35dcer" path="res://assets/character_images/SenjuTarashi.png" id="9_xgc7y"]
[ext_resource type="Texture2D" uid="uid://covqhp67oxm8c" path="res://assets/character_images/UchihaSetsuna.png" id="10_pyup1"]
[ext_resource type="Texture2D" uid="uid://cskwhqgeixman" path="res://assets/character_images/HyugaHeika.png" id="11_rsmot"]
[ext_resource type="Texture2D" uid="uid://crn250p63axhw" path="res://assets/character_images/Hotdog.png" id="12_c70ll"]

[sub_resource type="SpriteFrames" id="SpriteFrames_ooebg"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_ecdn6")
}, {
"duration": 1.0,
"texture": ExtResource("5_rkjw8")
}, {
"duration": 1.0,
"texture": ExtResource("6_7iab1")
}, {
"duration": 1.0,
"texture": ExtResource("7_35sen")
}, {
"duration": 1.0,
"texture": ExtResource("8_joer5")
}, {
"duration": 1.0,
"texture": ExtResource("9_xgc7y")
}, {
"duration": 1.0,
"texture": ExtResource("10_pyup1")
}, {
"duration": 1.0,
"texture": ExtResource("11_rsmot")
}, {
"duration": 1.0,
"texture": ExtResource("12_c70ll")
}],
"loop": true,
"name": &"Units",
"speed": 5.0
}]

[node name="SummonScene" type="Control"]
visibility_layer = 512
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_yxd1t")

[node name="SummonScreen" type="Sprite2D" parent="."]
position = Vector2(359, 541)
texture = ExtResource("2_ra40d")

[node name="SingleSummon" type="Button" parent="."]
layout_mode = 0
offset_left = 70.0
offset_top = 715.0
offset_right = 326.0
offset_bottom = 873.0
theme = ExtResource("1_dhpfl")
text = "Single-Summon
"

[node name="MultiSummon" type="Button" parent="."]
layout_mode = 0
offset_left = 379.0
offset_top = 715.0
offset_right = 650.0
offset_bottom = 874.0
theme = ExtResource("1_dhpfl")
text = "Multi-Summon
"

[node name="COverlay" type="Sprite2D" parent="."]
visible = false
position = Vector2(359, 542)
texture = ExtResource("4_g2wec")

[node name="ROverlay" type="Sprite2D" parent="."]
visible = false
position = Vector2(359, 541)
texture = ExtResource("5_qco1a")

[node name="SrOverlay" type="Sprite2D" parent="."]
visible = false
position = Vector2(359, 541)
texture = ExtResource("6_tarvw")

[node name="UrOverlay" type="Sprite2D" parent="."]
visible = false
position = Vector2(361, 541)
texture = ExtResource("8_ed6ho")

[node name="DisabledSummonButton" type="Button" parent="."]
layout_mode = 0
offset_left = 223.0
offset_top = 912.0
offset_right = 507.0
offset_bottom = 1077.0
theme = ExtResource("1_dhpfl")
disabled = true
text = "Summon"

[node name="MenuButton" type="Button" parent="."]
layout_mode = 0
offset_left = 23.0
offset_top = 931.0
offset_right = 216.0
offset_bottom = 1074.0
theme = ExtResource("1_dhpfl")
text = "Menu
"

[node name="CListButton" type="Button" parent="."]
layout_mode = 0
offset_left = 513.0
offset_top = 925.0
offset_right = 708.0
offset_bottom = 1077.0
theme = ExtResource("1_dhpfl")
text = "Character List
"

[node name="MenuRank" type="Sprite2D" parent="."]
position = Vector2(351.5, 86.5)
scale = Vector2(2.45667, 1.93)
texture = ExtResource("9_rtcew")

[node name="SummonIcons" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(367, 459)
sprite_frames = SubResource("SpriteFrames_ooebg")
animation = &"Units"
speed_scale = 0.0

[connection signal="pressed" from="SingleSummon" to="." method="_on_single_summon_pressed"]
[connection signal="pressed" from="MultiSummon" to="." method="_on_multi_summon_pressed"]
[connection signal="pressed" from="MenuButton" to="." method="_on_menu_button_pressed"]
[connection signal="pressed" from="CListButton" to="." method="_on_c_list_button_pressed"]
